kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fuseki-svc
  labels:
    run: fuseki-svc
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3030
  selector:
    app: fuseki-dpl
