kustomize/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  # annotations:
  #   cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  rules:
    - host: set-in-overlay
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: fuseki-svc
                port:
                  number: 80
  # tls:
  #   - hosts:
  #       - set-in-overlay
  #     secretName: lock-unlock-fuseki-tls
